# polymarket-tracker

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  skills-lock.json
migrations/: 001_init.sql  002_last_synced_timestamp.sql  003_registered_chats.sql  004_trade_filters.sql
src/: bot_score.rs  config.rs  db.rs  filter.rs  health.rs  main.rs  notifier.rs  poller.rs  polymarket.rs  telegram.rs
